Fixes to move FusionTable POST parameters into the body of the post.